<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dept.Course_cs">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Course Contents"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FIRST YEAR - SEM I"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:lineSpacingExtra="15sp"
                        android:text="@string/CSSEM1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />


                </TableRow>
            </TableLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="FIRST YEAR - SEM II"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/CSsemII"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SECOND YEAR - SEM III"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/CSSEMIII"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SECOND YEAR - SEM IV"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/CSSemIV"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                </TableRow>
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="THIRD YEAR - SEM V"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/CSSemV"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                </TableRow>
            </TableLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">
                <TableRow
                    android:background="@color/grey"
                    android:layout_marginBottom="3dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="THIRD YEAR - SEM VI"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:padding="10sp"
                        android:textSize="14sp"
                        android:layout_weight="4"
                        android:gravity="center"/>



                </TableRow>
                <TableRow
                    android:background="@color/grey">


                    <TextView
                        android:layout_width="290dp"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/CSSemVI"
                        android:textColor="@color/black"
                        android:textSize="14sp"/>


                </TableRow>
            </TableLayout>
        </LinearLayout>






    </LinearLayout>

</ScrollView>